@@ -4,6 +4,10 @@
 # BREAK = change breaks existing code
 # BUG	= fixed a bug that was (or could have been) crashing
 
+January 16, 2001
+	implemented basic unit tests
+	several bug cleanups with Rects (thx unit tests)
+
 January 14, 2001
 	display.update() boundaries fixed
 
